[gd_scene load_steps=21 format=3 uid="uid://d20nbii1e6786"]

[ext_resource type="Texture2D" uid="uid://b874770nl0lrl" path="res://assets/graphics/ancre.png" id="1_5bl3i"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_c23cg"]
[ext_resource type="PackedScene" uid="uid://cdok0edoo2cn5" path="res://scenes/selector.tscn" id="2_sorrk"]
[ext_resource type="Texture2D" uid="uid://ctki54derwg6v" path="res://assets/graphics/montagne_1_4x.png" id="3_5w4rl"]
[ext_resource type="Texture2D" uid="uid://dj4m6ur1y2bg5" path="res://assets/graphics/Sans titre.png" id="3_ha58w"]
[ext_resource type="Texture2D" uid="uid://dyjuyvqkfipfi" path="res://assets/graphics/montagne_2_4x.png" id="4_5rax6"]
[ext_resource type="Texture2D" uid="uid://dm7bf74o5mwg0" path="res://assets/graphics/square.png" id="4_6fnpg"]
[ext_resource type="PackedScene" uid="uid://qehu1ogs35hq" path="res://scenes/dechet.tscn" id="6_44eoj"]
[ext_resource type="Texture2D" uid="uid://dlyjcxrblug2c" path="res://assets/graphics/tresor_1.png" id="6_texyg"]
[ext_resource type="PackedScene" uid="uid://buw3r2fgpi0mc" path="res://scenes/cale.tscn" id="7_avmbb"]
[ext_resource type="PackedScene" uid="uid://l480keiox2l" path="res://scenes/manager/entity_generator.tscn" id="8_6tcgo"]
[ext_resource type="Texture2D" uid="uid://cn5lvyk6hvj3c" path="res://assets/graphics/tresor_2.png" id="10_vu4km"]
[ext_resource type="Texture2D" uid="uid://gel77qsji6ey" path="res://assets/graphics/tresor_3.png" id="11_6mhm6"]
[ext_resource type="Texture2D" uid="uid://88vj8wv7qg0y" path="res://assets/graphics/test_fade.png" id="12_qhk1k"]
[ext_resource type="PackedScene" uid="uid://2pvlg0ulw8sc" path="res://scenes/manager/background_manager.tscn" id="13_256am"]
[ext_resource type="Texture2D" uid="uid://coh038jlsspfo" path="res://assets/graphics/bulle_1.png" id="14_h3ss0"]
[ext_resource type="Texture2D" uid="uid://ckjaujdfgv8sq" path="res://assets/graphics/poisson_1.png" id="15_lynyq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ul6nb"]
light_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68ixc"]
size = Vector2(100, 30)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bx0c1"]
blend_mode = 1

[node name="Main" type="Node2D"]
script = ExtResource("1_c23cg")

[node name="ancre_parent" type="Node2D" parent="."]

[node name="camera" type="Camera2D" parent="ancre_parent"]
position = Vector2(640, 360)

[node name="Sprite2D" type="Sprite2D" parent="ancre_parent/camera"]
modulate = Color(0, 0.00779003, 0.133412, 1)
material = SubResource("CanvasItemMaterial_ul6nb")
position = Vector2(96.0002, 129.001)
scale = Vector2(68.34, 107.8)
texture = ExtResource("1_5bl3i")

[node name="montagne_1" type="Sprite2D" parent="ancre_parent/camera"]
modulate = Color(0.0972062, 0.0972062, 0.0972062, 1)
position = Vector2(238, 250)
texture = ExtResource("3_5w4rl")

[node name="montagne_2" type="Sprite2D" parent="ancre_parent/camera"]
modulate = Color(0.14699, 0.14699, 0.14699, 1)
position = Vector2(-88, 274)
texture = ExtResource("4_5rax6")

[node name="ancre" type="Sprite2D" parent="ancre_parent"]
position = Vector2(640, 234.25)
texture = ExtResource("1_5bl3i")

[node name="PointLight2D" type="PointLight2D" parent="ancre_parent/ancre"]
enabled = false
blend_mode = 2
texture = ExtResource("3_ha58w")

[node name="Area2D" type="Area2D" parent="ancre_parent/ancre" groups=["ancre"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ancre_parent/ancre/Area2D"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_68ixc")

[node name="radar" type="Sprite2D" parent="ancre_parent/ancre"]
visible = false
modulate = Color(0, 1, 0.114498, 1)
clip_children = 1
rotation = 3.92699
scale = Vector2(0.514, 0.528)
texture = ExtResource("4_6fnpg")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="ancre_parent/ancre/radar"]
modulate = Color(1, 1, 1, 0.537255)
material = SubResource("CanvasItemMaterial_bx0c1")
position = Vector2(390, 390)
rotation = 3.14159
texture = ExtResource("12_qhk1k")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Selector" parent="CanvasLayer" instance=ExtResource("2_sorrk")]
position = Vector2(360, 607)

[node name="cale" parent="CanvasLayer" instance=ExtResource("7_avmbb")]
visible = false
position = Vector2(929, 1)

[node name="remonter" type="Button" parent="CanvasLayer"]
offset_left = 996.0
offset_top = 618.0
offset_right = 1129.0
offset_bottom = 672.0
text = "Remonter"

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="depth" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_right = 159.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24

[node name="oxygen" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_top = 57.0
offset_right = 159.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 24

[node name="oxygen_warning" type="Label" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 0
offset_left = 331.0
offset_top = 683.0
offset_right = 974.0
offset_bottom = 714.0
theme_override_font_sizes/font_size = 18
text = "Throw treasure or will not be enable to rise without destroy some of them"
horizontal_alignment = 1
vertical_alignment = 1

[node name="oxygen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1281.0
offset_bottom = 70.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/oxygen"]
modulate = Color(0.14699, 0.14699, 0.14699, 1)
position = Vector2(646, 37)
scale = Vector2(1.89231, 0.0897436)
texture = ExtResource("4_6fnpg")

[node name="completion" type="Sprite2D" parent="CanvasLayer/oxygen"]
modulate = Color(0.570149, 0.672503, 1, 1)
position = Vector2(278, 20)
scale = Vector2(1.88718, 0.0820513)
texture = ExtResource("4_6fnpg")
centered = false

[node name="depth" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 13.0
offset_right = 1294.0
offset_bottom = 70.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/depth"]
modulate = Color(0.14699, 0.14699, 0.14699, 1)
position = Vector2(26, 362.5)
scale = Vector2(0.0205128, 1.74615)
texture = ExtResource("4_6fnpg")

[node name="completion" type="Sprite2D" parent="CanvasLayer/depth"]
modulate = Color(0.570149, 0.672503, 1, 1)
position = Vector2(-2.99999, 28)
scale = Vector2(0.15641, 0.0307691)
texture = ExtResource("4_6fnpg")
centered = false

[node name="Label4" type="Label" parent="CanvasLayer/depth/completion"]
offset_left = -274.918
offset_top = -7247.52
offset_right = 246.082
offset_bottom = -6137.52
scale = Vector2(3.59, 13.356)
theme_override_font_sizes/font_size = 50
text = "300m
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="transition" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0, 0.0817818, 0.242031, 1)
position = Vector2(-736, 368)
scale = Vector2(13.94, 31.4667)
texture = ExtResource("1_5bl3i")

[node name="HUD2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="gold" type="Label" parent="CanvasLayer/HUD2"]
layout_mode = 0
offset_top = 114.0
offset_right = 159.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 24

[node name="skip_shop" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 530.0
offset_top = 650.0
offset_right = 733.0
offset_bottom = 704.0
text = "Skip the shop and restart
"

[node name="end_label" type="Label" parent="CanvasLayer"]
offset_left = -2.0
offset_top = 13.0
offset_right = 1280.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="bonus" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/bonus"]
layout_mode = 0
offset_left = 1060.0
offset_top = 319.0
offset_right = 1278.0
offset_bottom = 588.0

[node name="tuto" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/tuto"]
layout_mode = 0
offset_left = 348.0
offset_top = 547.0
offset_right = 934.0
offset_bottom = 606.0
theme_override_font_sizes/font_size = 20
text = "Slide to move your submarin and start the descent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/tuto"]
layout_mode = 0
offset_left = 925.0
offset_top = 563.0
offset_right = 1191.0
offset_bottom = 591.0
theme_override_font_sizes/font_size = 20
text = "Rise and sell your treasures"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/tuto"]
position = Vector2(1181, 270.5)
scale = Vector2(0.516667, 0.516667)
texture = ExtResource("6_texyg")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/tuto"]
position = Vector2(1058, 270.5)
scale = Vector2(0.516667, 0.516667)
texture = ExtResource("10_vu4km")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/tuto"]
position = Vector2(934, 270.5)
scale = Vector2(0.516667, 0.516667)
texture = ExtResource("11_6mhm6")

[node name="Label3" type="Label" parent="CanvasLayer/tuto"]
layout_mode = 0
offset_left = 889.0
offset_top = 301.5
offset_right = 1219.0
offset_bottom = 329.5
theme_override_font_sizes/font_size = 20
text = "Retrieve treasures from the depth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/tuto/Label3"]
layout_mode = 0
offset_left = 2.0
offset_top = 33.5
offset_right = 332.0
offset_bottom = 61.5
theme_override_font_sizes/font_size = 20
text = "Bigger treasures in depth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/tuto"]
layout_mode = 0
offset_left = 508.0
offset_top = 60.0
offset_right = 774.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 20
text = "Oxygen depletes..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="CanvasLayer/tuto"]
layout_mode = 0
offset_left = 55.0
offset_top = 104.0
offset_right = 439.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 20
text = "Go the deepest you can
Retrieve treasures to upgrade your ship"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundManager" parent="CanvasLayer" instance=ExtResource("13_256am")]
textures = Array[Texture2D]([ExtResource("14_h3ss0"), ExtResource("15_lynyq")])

[node name="Dechet" parent="." instance=ExtResource("6_44eoj")]
position = Vector2(626, 359)

[node name="EntityGenerator" parent="." instance=ExtResource("8_6tcgo")]
position = Vector2(0, -1)
textures = Array[Texture2D]([ExtResource("6_texyg"), ExtResource("10_vu4km"), ExtResource("11_6mhm6")])

[node name="Line2D" type="Line2D" parent="."]

[connection signal="area_entered" from="ancre_parent/ancre/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="pressed" from="CanvasLayer/remonter" to="." method="_on_remonter_pressed"]
[connection signal="pressed" from="CanvasLayer/skip_shop" to="." method="_on_skip_shop_pressed"]
